@@ -19,6 +19,7 @@ xx/07/2005 - 1.11.0-WIP - Fixes and a new utility ntfsmount, a FUSE ntfsmodule.
 	  when sector size was less than 512 bytes and then we wrote 512 bytes,
 	  i.e. beyond the end of the device.)  (Anton)
 	- Add new utility (make extra) - ntfsdecrypt.  (Yuval)
+	- Improve "already mounted" ckeck.  (Yura)
 
 20/06/2005 - 1.10.0 - Lots of new features, enhancements, and bug fixes.
 
